--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "eject": "react-scripts eject",
     "dev-chain": "hardhat node & yarn node scripts/deploy.js && fg",
 
-    "predeploy": "yarn cleanup && yarn hardhat compile && rm -r ./src/artifacts && mv ./artifacts ./src && yarn build",
-    "deploy": "gh-pages -d build -n",
-    "cleanup": "rm -rf ./node_modules/.cache/gh-pages"
+    "deploy": "yarn hardhat compile && rm -r ./src/artifacts && mv ./artifacts ./src && yarn build && cd build && git add --all && git commit -m \"Deploy updates\" && git push origin gh-pages"
   },
   "eslintConfig": {
     "extends": [
